--- a/index.html
+++ b/index.html
@@ -139,7 +139,19 @@
   </div>
 
   <footer>
-    Created with <i class="fas fa-heart" style="color: var(--primary);"></i> | 100% secure - all processing happens in your browser | <a href="#" id="toggle-theme"><i class="fas fa-moon"></i> Toggle Theme</a>
+    <div class="social-links">
+      <a href="https://github.com/harsifatsingh/instascan" target="_blank" rel="noopener">
+        <i class="fab fa-github"></i> GitHub
+      </a>
+      <a href="https://www.linkedin.com/in/harsifat-singh/" target="_blank" rel="noopener">
+        <i class="fab fa-linkedin"></i> LinkedIn
+      </a>
+    </div>
+    <div class="footer-meta">
+      Created with <i class="fas fa-heart" style="color: var(--primary);"></i> | 
+      100% secure - all processing happens in your browser | 
+      <a href="#" id="toggle-theme"><i class="fas fa-moon"></i> Toggle Theme</a>
+    </div>
   </footer>
 
   <script>
